--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "name": "ialerta_back_end",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "devDependencies": {
     "nodemon": "^3.1.11"
