--- a/.github/worflow.yaml
+++ b/.github/worflow.yaml
@@ -2,28 +2,29 @@ name: CI pipeline
 
 on:
   push:
-    branches[main]:
+    branches: [main]
   pull_request:
-    branches[main]:
+    branches: [main]
+
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-        # do checkout of code
+      # checkout of code
       - name: Checkout code
         uses: actions/checkout@v3
 
-        # configure node.js
+      # configure Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-        
-        # install dependencies
+
+      # install dependencies
       - name: Install dependencies
         run: npm ci
 
-        # run tests
+      # run tests
       - name: Run tests
-        run: npm tests
+        run: npm test
