--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -12,14 +12,19 @@ jobs:
 
     steps:
       # checkout of code
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # - name: Checkout code
+      #   uses: actions/checkout@v3
 
       # configure Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 22
+      
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
 
       # install dependencies
       - name: Install dependencies
