--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -18,7 +18,7 @@ jobs:
 
       # install dependencies
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       # run tests
       - name: Run tests
