feat: Sendding new fixes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "name": "ialerta_back_end",
   "version": "1.0.0",
