--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^5.2.1",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
-    "pdf-parse": "^2.4.5",
+    "pdf-parse": "1.1.1",
+    "pdfjs-dist": "^5.4.530",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
