--- a/.github/workflow/deploy.yaml
+++ b/.github/workflow/deploy.yaml
@@ -20,6 +20,19 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
+      - name: Configure Docker
+        run: gcloud auth configure-docker --quiet
+
+      - name: Build Docker image
+        run: |
+          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
+          docker build -t $IMAGE .
+
+      - name: Push Docker image
+        run: |
+          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
+          docker push $IMAGE
+
       - name: Deploy to Cloud Run
         run: |
           IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
@@ -27,5 +40,5 @@ jobs:
             --image $IMAGE \
             --platform managed \
             --region us-central1 \
-            --allow-unauthenticated
+            --allow-unauthenticated \
             --set-env-vars PORT=3000,HF_TOKEN=${{ secrets.HF_TOKEN }}
