--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -1,45 +1,23 @@
-name: CI + Deploy
+name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm install
-      - run: npm test
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-      - run: gcloud auth configure-docker --quiet
-      - run: |
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
-          docker build -t $IMAGE .
-          docker push $IMAGE
-      - run: |
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
-          gcloud run deploy ialerta-backend \
-            --image $IMAGE \
-            --platform managed \
-            --region us-central1 \
-            --allow-unauthenticated \
-            --set-env-vars PORT=3000,HF_TOKEN=${{ secrets.HF_TOKEN }}
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
