--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,30 +13,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
-      - name: Configure Docker
-        run: gcloud auth configure-docker gcr.io --quiet
-
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker us-docker.pkg.dev --quiet
 
       - name: Build Docker image
         run: |
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
+          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           docker build -t $IMAGE .
 
       - name: Push Docker image
         run: |
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
+          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           docker push $IMAGE
 
       - name: Deploy to Cloud Run
         run: |
-          IMAGE=gcr.io/${{ secrets.GCP_PROJECT_ID }}/ialerta-backend:latest
+          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           gcloud run deploy ialerta-backend \
             --image $IMAGE \
             --platform managed \
