ci: Sendding some fix

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,21 +24,21 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker us-docker.pkg.dev --quiet
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
       - name: Build Docker image
         run: |
-          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
+          IMAGE=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           docker build -t $IMAGE .
 
       - name: Push Docker image
         run: |
-          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
+          IMAGE=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           docker push $IMAGE
 
       - name: Deploy to Cloud Run
         run: |
-          IMAGE=us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
+          IMAGE=us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ialerta/ialerta-backend:latest
           gcloud run deploy ialerta-backend \
             --image $IMAGE \
             --platform managed \
